infrastructures/argo-workflows/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: argo
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 2746
      targetPort: 2746
  selector:
    app: argo-server
  loadBalancerIP: 192.168.10.201
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  ports:
    - name: api
      port: 9100
      protocol: TCP
      targetPort: 80
  selector:
    app: httpbin
